--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 	<title>Resume</title>
 </head>
 <body>
-   <h1>kalyan</h1>
+   <div class="flex-main">
+   	<div class="profile">
+   		
+   	</div>
+   	<div class="content">
+   		
+   	</div>
+   </div>
 </body>
 </html>
