--- a/index.html
+++ b/index.html
@@ -2,15 +2,25 @@
 <html>
 <head>
 	<title>Resume</title>
+	<meta  name="viewport" content="width=device-width" initial-scale="0px">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
    <div class="flex-main">
    	<div class="profile">
-   		
+   		<center>
+   		<h3>welcome to my Profile</h3>
+   		<img src="user.png" alt="profile" height="100px" width="100px">
+   		<h3>sivamohan</h3>
+   		<h4>programmer</h4>
+   		<a href="mailto:sivamohan830@gmail.com">sivamohan830@gmail.com</a>
+   		<h4>+91-7660821885</h4>
+   		</center>
    	</div>
    	<div class="content">
-   		
+
    	</div>
    </div>
+   <script src="main.js" type="text/javascript"> </script>
 </body>
 </html>
